First working prod

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = process-notifier
+name = ti-ding
 version = 1.0.0
 author = Anand Chourasia
 author_email = anandchourasia007@gmail.com
